--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,13 @@
 ---
+import Bento from '../components/Bento.astro';
+import Contacto from '../components/Contacto.astro';
+import Cotizacion from '../components/Cotizacion.astro';
+import Entrada from '../components/Entrada.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import Historia from '../components/Historia.astro';
+import Productos from '../components/Productos.astro';
+import Testimonios from '../components/Testimonios.astro';
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -7,5 +16,13 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+<Header/>
+<Entrada/>
+<Productos/>
+<Bento/>
+<Cotizacion/>
+<Historia/>
+<Testimonios/>
+<Contacto/>
+<Footer/>
 </Layout>
