--- a/src/components/Cotizacion.astro
+++ b/src/components/Cotizacion.astro
@@ -3,9 +3,9 @@ import CotizadorA from "./CotizadorA.astro";
 import CotizadorN from "./CotizadorN.astro";
 ---
 
-<section class="py-16 px-4 bg-white">
+<section class="w-full py-16 px-4 bg-white ">
     <div class="max-w-7xl mx-auto">
-        <h2 class="text-2xl font-normal mb-4 text-left">Historia</h2>
+        <h2 class="text-2xl font-normal mb-4 text-left">Cotizadores</h2>
         <hr class="pt-2 pb-6 border-t border-gray-200" />
       
      <!-- Grid para alinear lado a lado -->
