--- a/src/components/CotizadorN.astro
+++ b/src/components/CotizadorN.astro
@@ -1,4 +1,4 @@
-<div data-aos="zoom-in-left" class="bg-gray-50 p-6 rounded-lg shadow-md w-[370px] h-[490px] max-w-2xl mx-auto flex flex-col justify-between">
+<div id="cardMaritimo" data-aos="zoom-in-left" class="bg-gray-50 p-6 rounded-lg shadow-md w-[370px] h-[490px] max-w-2xl mx-auto flex flex-col justify-between transition-all duration-300">
   <!-- Título -->
   <div>
     <h2 class="text-2xl font-semibold text-center text-gray-800 mb-6">
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Campo Toneladas -->
-    <div class="mb-12">
+    <div class="mb-8">
       <label for="toneladasMaritimo" class="block text-sm font-medium text-gray-600 mb-2">
         Toneladas:
       </label>
