--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,37 +1,38 @@
-
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<script type="module" src="/src/scripts/initAOS.js"></script>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/logoblanco.png" />
+    <script type="module" src="/src/scripts/initAOS.js"></script>
 
-		<meta name="generator" content={Astro.generator} />
-		<title>Importaciones AN</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+    <title>Importaciones</title>
+    <meta name="description" content="Calculá fácilmente el costo estimado de importación marítima con nuestra herramienta gratuita. Ahorra tiempo y dinero con AN Importaciones." />
+  </head>
+
+  <body class="bg-white text-gray-900 w-full overflow-x-hidden">
+    <main class="w-full">
+      <slot />
+    </main>
+  </body>
 </html>
 
 <style>
-	@font-face {
-  font-family: 'Brown';
-  src: url('/fonts/Brown-Regular.woff2') format('woff2'),
-	   url('/fonts/Brown-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-	html,
-	body {
-		font-family: 'Brown', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  @font-face {
+    font-family: 'Brown';
+    src: url('/fonts/Brown-Regular.woff2') format('woff2'),
+         url('/fonts/Brown-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	
-	}
-
-
+  html,
+  body {
+    font-family: 'Brown', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
+
