--- a/src/components/Testimonios.astro
+++ b/src/components/Testimonios.astro
@@ -1,4 +1,4 @@
-<section class="w-full py-16 px-4  bg-white">
+<section class="w-full py-16 px-4  bg-white ml-12 md:ml-0">
   <div class="max-w-7xl mx-auto text-left ">
     <h2 class="text-2xl font-normal mb-4">Clientes</h2>
       <hr class="pt-2 pb-6 border-t border-gray-200" />
