--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -2,7 +2,7 @@
   data-aos="fade-up"
   data-aos-offset="200"
   data-aos-easing="ease-in-sine"
-  class="w-full py-16 px-4 bg-white " 
+  class="w-full py-16 px-4 bg-white ml-12 md:ml-0" 
 >
   <div class="max-w-7xl mx-auto">
     <h2 class="text-2xl font-normal mb-4 text-left">¿Por qué elegirnos?</h2>
