--- a/src/components/Entrada.astro
+++ b/src/components/Entrada.astro
@@ -1,4 +1,4 @@
-<section class=" px-4 py-6 mt-[60px] ">
+<section class=" px-4 py-6 mt-[60px] ml-12 md:ml-0">
   <div class="w-full h-[600px] md:h-[700px] rounded-lg overflow-hidden relative">
     
     <!-- Imagen de fondo -->
