--- a/src/components/Historia.astro
+++ b/src/components/Historia.astro
@@ -2,7 +2,7 @@
 // Timeline.astro - Alternating timeline component
 ---
 
-<section  class="w-full py-16 px-4 bg-white ">
+<section  class="w-full py-16 px-4 bg-white ml-12 md:ml-0">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-2xl font-normal mb-4 text-left">Objetivos</h2>
       <hr class="pt-2 pb-6 border-t border-gray-200" />
