--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -1,6 +1,6 @@
 
 
-<section data-aos="zoom-in-up" class="w-full py-16 px-4 bg-white ">
+<section data-aos="zoom-in-up" class="w-full py-16 px-4 bg-white ml-12 md:ml-0">
     <div class="max-w-5xl mx-auto">
       <div class="bg-gray-50 rounded-xl border border-gray-50 p-8 md:p-10 shadow-lg text-center">
         <h2 class="text-2xl md:text-3xl font-bold mb-4 text-black">Listo para importar?</h2>
