--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -4,7 +4,7 @@
 <section data-aos="fade-up"
         data-aos-offset="200"
         data-aos-easing="ease-in-sine"
-        class="w-full py-16 px-4 ">
+        class="w-full py-16 px-4 ml-12 md:ml-0">
   <div class="max-w-7xl mx-auto">
     <h2 class="text-2xl font-normal mb-4 text-left">Productos</h2>
     <hr class="pt-2 pb-6 border-t border-gray-200" />
