--- a/src/components/Entrada.astro
+++ b/src/components/Entrada.astro
@@ -1,19 +1,33 @@
-<section class=" px-4 py-6 mt-[60px] ml-12 md:ml-0">
-  <div class="w-full h-[600px] md:h-[700px] rounded-lg overflow-hidden relative">
+<section class=" md:px-4 md:py-6  mt-32 md:mt-[60px] mr-10 md:mr-0 ml-8 md:ml-0">
+  <div class="w-[500px] md:w-full h-[700px] md:h-[700px] rounded-lg overflow-hidden relative">
     
     <!-- Imagen de fondo -->
-    <img
-      src="/barco2.webp"
-      alt="New York Skyline"
-      class="w-full h-full object-cover"
-    />
+
+
+<!-- Imagen para móviles -->
+<img
+  src="/barcoweb.webp"
+  alt="Barco móvil"
+  class="block md:hidden w-full h-[750px] object-cover object-center scale-110"
+/>
+
+
+
+<!-- Imagen para escritorio -->
+<img
+  src="/barco2.webp"
+  alt="Barco escritorio"
+  class="hidden md:block w-full h-full object-cover"
+/>
+
+
 
     <!-- Contenido -->
     <div
       class="absolute inset-0 flex flex-col justify-start 
              items-center text-center 
              md:items-start md:text-left 
-             px-4 md:px-16 pt-6 md:pt-24"
+             px-4 md:px-16 pt-32 md:pt-32"
     >
       <div class="max-w-2xl">
         <h1 class="text-5xl md:text-6xl font-bold text-white leading-tight mb-4">
