--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,11 +6,11 @@
   data-aos="fade-up"
   data-aos-offset="200"
   data-aos-easing="ease-in-sine"
-  class="w-full py-16 px-4 bg-white"
+  class="w-full py-16 px-2 bg-white ml-2 md:ml-0"
 >
   <div class="max-w-7xl mx-auto">
     <!-- Título principal -->
-    <h2 class="text-6xl md:text-7xl font-black mb-12 text-center">
+    <h2 class="text-5xl md:text-7xl font-black mb-12 text-center">
       IMPORTACIONES AN
     </h2>
 
