--- a/src/components/Entrada.astro
+++ b/src/components/Entrada.astro
@@ -1,5 +1,5 @@
-<section class=" md:px-4 md:py-6  mt-32 md:mt-[60px] mr-4 md:mr-0 ml-2 md:ml-0">
-  <div class="w-[500px] md:w-full h-[700px] md:h-[700px] rounded-lg overflow-hidden relative">
+<section class=" md:px-4 md:py-6  mt-32 md:mt-[60px] mr-2 md:mr-0 ml-2 md:ml-0">
+  <div class="w-[500px] md:w-full h-[700px] md:h-[700px] md:rounded-lg overflow-hidden relative">
     
     <!-- Imagen de fondo -->
 
